objects/Account.object
<CustomObject>
    <fields>
        <fullName>Contract_Close_date__c</fullName>
        <label>Contract Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Starting_date__c</fullName>
        <label>Contract Starting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Annual_Revenue__c</fullName>
        <label>New Annual Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <label>New City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>New_State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Secunderabad</fullName>
                </value>
                <value>
                    <fullName>Banglore</fullName>
                </value>
                <value>
                    <fullName>Manglore</fullName>
                </value>
                <value>
                    <fullName>Tiruvananthapuram</fullName>
                </value>
                <value>
                    <fullName>Kochi</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Madurai</fullName>
                </value>
                <value>
                    <fullName>Vizak</fullName>
                </value>
                <value>
                    <fullName>Vijayawada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <label>New State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_field__c</fullName>
        <label>New field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_status__c</fullName>
        <label>Project status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_text_field__c</fullName>
        <label>Sample text field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_description__c</fullName>
        <label>Work description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>field_1__c</fullName>
        <label>field 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Rating_record_type</fullName>
        <active>true</active>
        <description>This record type has different rating values</description>
        <label>Rating record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>